<resources>
    <string name="app_name">Unity UpLift </string>
    <string name="login">Login</string>
    <string name="goto_main">Goto Main</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_here">Login</string>
    <string name="intent">Intent</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="select_image">Select Image</string>
    <string name="selectimage">SelectImage</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Password</string>
    <string name="dont_have_an_account">Dont Have An Account ? </string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="edit">Edit Profile</string>
    Govind
    <string name="govindpa399_gmail_com">Govindpa399@gmail.com</string>
    <string name="music_community">Music Community</string>
    <string name="Mdisc">A music community is an interactive platform designed for music enthusiasts, artists, producers, and fans to connect, share, and engage with each other. This community fosters collaboration, creativity, and discovery</string>

    <string name="back_button">Back Button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="user_bio">User Bio</string>
    <string name="follow">Follow</string>
    <string name="programming">Programming</string>
    <string name="enter_community_name">Enter Community Name</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="communities">Communities</string>
    <string name="community_name">Community Name</string>
    <string name="community_description">Community Description</string>
    <string name="home_community_image">Home Community Image</string>
    <string name="like">like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="image_to_be_posted">Image to be Posted</string>
    <string name="enter_description_of_topic">Enter Description of topic</string>
    <string name="designed_by_gtu_students">Designed by GTU Students</string>
    <string name="cricket">Cricket</string>
    <string name="all_communities">All Communities</string>
    <string name="music">Music</string>
    <string name="gaming">Gaming</string>
    main
</resources>