<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:backgroundTint="@color/primary"/>


    <TextView
        android:id="@+id/already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        android:layout_margin="15dp"
        android:gravity="center"/>

</LinearLayout>